tests/idris2/perror004/expected
1/1: Building PError (PError.idr)
Error: Wrong number of 'with' arguments: expected 2 but got 3.

PError.idr:4:33--4:34
 1 | foo : Nat -> Nat -> Bool
 2 | foo x y with (x == y)
 3 |   foo x y | True with (y == x)
 4 |     foo x y | True | False | 10 = x
                                     ^

